--- a/docker.yaml
+++ b/docker.yaml
@@ -6,7 +6,7 @@ data:
     # Module name, optional
     # Typically filled in by the buildsystem, using the VCS repository
     # name as the name of the module.
-    name: docker
+    # name: docker
     # Module update stream, optional
     # Typically filled in by the buildsystem, using the VCS branch name
     # as the name of the stream.
